# PacketGhost

./: .gitignore  CMakeLists.txt  README.md  sample.config
.cache/clangd/index/: checksum.cpp.235DF8C701E76A58.idx  checksum.h.AF38C65D9A762872.idx  engine.cpp.F481F73C2CD22EFB.idx  headers.h.3FCB8457D7442540.idx  interceptor.cpp.EEDCF3DC07A9A719.idx  interceptor.h.3CAD109CEC57117A.idx  main.cpp.D6EFC8B08831504C.idx  packet_parser.cpp.8201B07D5611FB06.idx  tcp_state.cpp.B63F96C16BA17D9A.idx  test_checksum.cpp.C5E66574DB29FE96.idx
DPITest/: key_word_detection.py
src/: common.h  main.c  main.cpp
src/config/: config.c  config.h
src/core/: apply_strategies.c  apply_strategies.h  fragmenter.c  fragmenter.h  interceptor.cpp  interceptor.h  mutator.c  mutator.h  strategies.c  strategies.h
src/network/: injector.c  injector.h
src/protocol/: headers.h  packet.c  packet.h
src/state/: session.c  session.h
src/utils/: checksum.cpp  checksum.h  csum.h  minunit.h  protocol_types.h
tests/: main_test.c  test_checksum.cpp  test_packet.c  test_packet.h  test_utils.c  test_utils.h
